; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_bench.c_BMK_syntheticTest.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_bench.c_BMK_syntheticTest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"not enough memory\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"Synthetic %2u%%\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, double, i8*, i32)* @BMK_syntheticTest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @BMK_syntheticTest(i32 %0, i32 %1, double %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca double, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca [20 x i8], align 16
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store double %2, double* %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %14 = bitcast [20 x i8]* %11 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %14, i8 0, i64 20, i1 false)
  store i64 10000000, i64* %12, align 8
  %15 = load i64, i64* %12, align 8
  %16 = call i8* @malloc(i64 %15)
  store i8* %16, i8** %13, align 8
  %17 = load i8*, i8** %13, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %5
  %20 = call i32 @EXM_THROW(i32 21, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %5
  %22 = load i8*, i8** %13, align 8
  %23 = load i64, i64* %12, align 8
  %24 = load double, double* %8, align 8
  %25 = call i32 @RDG_genBuffer(i8* %22, i64 %23, double %24, double 0.000000e+00, i32 0)
  %26 = getelementptr inbounds [20 x i8], [20 x i8]* %11, i64 0, i64 0
  %27 = load double, double* %8, align 8
  %28 = fmul double %27, 1.000000e+02
  %29 = fptoui double %28 to i32
  %30 = call i32 @snprintf(i8* %26, i32 20, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  %31 = load i8*, i8** %13, align 8
  %32 = load i64, i64* %12, align 8
  %33 = getelementptr inbounds [20 x i8], [20 x i8]* %11, i64 0, i64 0
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i8*, i8** %9, align 8
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @BMK_benchCLevel(i8* %31, i64 %32, i8* %33, i32 %34, i32 %35, i64* %12, i32 1, i8* %36, i32 %37)
  %39 = load i8*, i8** %13, align 8
  %40 = call i32 @free(i8* %39)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i8* @malloc(i64) #2

declare dso_local i32 @EXM_THROW(i32, i8*) #2

declare dso_local i32 @RDG_genBuffer(i8*, i64, double, double, i32) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #2

declare dso_local i32 @BMK_benchCLevel(i8*, i64, i8*, i32, i32, i64*, i32, i8*, i32) #2

declare dso_local i32 @free(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
